other/deployment-replicas-higher-than-pdb/.chainsaw-test/bad-pdb.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: bad-pdb01
spec:
  minAvailable: 3
  selector:
    matchLabels:
      app: busybox
---
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: bad-pdb02
spec:
  minAvailable: 4
  selector:
    matchLabels:
      app: busybox
---
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: bad-pdb03
spec:
  minAvailable: 5
  selector:
    matchLabels:
      app: busybox
---
