other/deployment-replicas-higher-than-pdb/.chainsaw-test/existing-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpha-busybox
  labels:
    app: busybox
spec:
  replicas: 3
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: busybox:1.36
        name: busybox
        command: ["sleep", "infinity"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bravo-busybox
  labels:
    app: busybox
spec:
  replicas: 5
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: busybox:1.36
        name: busybox
        command: ["sleep", "infinity"]
