other/deployment-replicas-higher-than-pdb/.chainsaw-test/good-pdb.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: good-pdb01
spec:
  minAvailable: 2
  selector:
    matchLabels:
      app: busybox
---
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: good-pdb02
spec:
  minAvailable: 1
  selector:
    matchLabels:
      app: busybox
---
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: good-pdb03
spec:
  minAvailable: 3
  selector:
    matchLabels:
      app: nginx
---
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: good-pdb04
spec:
  maxUnAvailable: 3
  selector:
    matchLabels:
      app: busybox
---
